public static class Preconsts
{
    // Tag
    public const string Tag_Player = "Player";
    public const string Tag_Untagged = "Untagged";
    public const string Tag_Ladder = "Ladder";
    // LayerMask
    public const string Layer_Player = "Player";
    public const string Layer_Ground = "Ground";
    public const string Layer_Wall = "Wall";
    public const string Layer_Default = "Default";
    public const string Layer_IgnoreRaycast = "Ignore Raycast";
    public const string Layer_Ladder = "Ladder";

    //Animation
    public const string Anim_Idle = "Idle";
    public const string Anim_Walk = "Walk";
    public const string Anim_Run = "Run";
    public const string Anim_Move = "Move";
    public const string Anim_Attack = "Attack";
    public const string Anim_Landing = "Landing";
    public const string Anim_Jump = "Jump";
    public const string Anim_Falling = "Falling";
    public const string Anim_Foot = "Foot";
    public const string Anim_Ladder = "Ladder";
    public const string Multiplier_Ladder = "MultiplierLadder";
    public const string Anim_Jetpack = "Jetpack";
    public const string Anim_Die = "Die";
    public const string Anim_MultiplierMove = "MultiplierMove"; 
}
